INCLUDE_DIRECTORIES( ${LLVM_ROOT}/include )
INCLUDE_DIRECTORIES( ${LLVM_SRC}/include )
LINK_DIRECTORIES( ${LLVM_ROOT}/lib )

SET(LLVM_CPPFLAGS "-DNDEBUG -D_GNU_SOURCE -D__STDC_LIMIT_MACROS -D__STDC_CONSTANT_MACROS")
SET(LLVM_CFLAGS "-Os -g -fomit-frame-pointer -fPIC")
SET(LLVM_CXXFLAGS "-Os -g -fomit-frame-pointer -fPIC -Woverloaded-virtual -Wcast-qual -fno-rtti -fno-exceptions")

SET(CMAKE_CPP_FLAGS "${CMAKE_CPP_FLAGS} ${LLVM_CPPFLAGS} -g -Werror")
SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${LLVM_CPPFLAGS} ${LLVM_CXXFLAGS} -g -Werror")
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${LLVM_CPPFLAGS} ${LLVM_CXXFLAGS} -g -Werror")

SET(OBJ_PREFIX "axtor-")

include_directories (${CMAKE_CURRENT_SOURCE_DIR}/include)

ADD_SUBDIRECTORY(lib)
ADD_SUBDIRECTORY(tools)
